--- a/src/components/app-header/app-header.css
+++ b/src/components/app-header/app-header.css
@@ -4,9 +4,10 @@
 
 .app-header h1 {
     flex-grow: 1;
+    color: rgb(46, 46, 170);
 }
 
 .app-header h2 {
     font-size: 1.2rem;
-    color: grey;
+    color: rgb(165, 40, 133);
 }
